# bluetooth-presence-service

./: .gitignore  Dockerfile  LICENSE  README.md  app.py  bt_scan.py  config.json  config.py  discovery_service.py  main.py  pyproject.toml  pyrightconfig.json  scan.py
.github/workflows/: docker-build-push.yml
bt_scan.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
components/: device_tracker.py  scan_all_button.py  scan_device_button.py  scan_timeout_number.py
mqtt/: __init__.py  config.py  discovery.py  listeners.py  on_connect.py  on_disconnect.py  sendEvent.py  send_event.py  start_mqtt_loop.py  states.py  topics.py  types.py
mqtt/discovery/: __init__.py  components.py  device_payload.py  discovery_payload.py  runDiscovery.py  run_discovery.py
utils/: read_config.py  scan.py
