[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bt-scan"
version = "0.1.0"
description = "Simple Bluetooth scanner for Home Assistant"
authors = [{ name = "Mihai", email = "mihailambru99@gmail.com" }]
dependencies = [
    "bleak>=0.22.0",
		"paho-mqtt"
]

[project.scripts]
bt-scan = "bt_scan.main:run"

[tool.setuptools.packages.find]
include = ["mqtt*", "components*"]
